# to-do-dapp

./: .gitignore  Cargo.toml  NOTICE  README.md  example.env
.cargo/: config
artifacts/: checksums.txt  checksums_intermediate.txt  to_do_dapp-aarch64.wasm
contract/to-do-contract/: Cargo.toml
contract/to-do-contract/schema/: to-do-dapp.json
contract/to-do-contract/src/: contract.rs  integration_tests.rs  lib.rs  state.rs
node-main/config/: config.toml
scripts/: Cargo.toml  daemon_state_local.json 
scripts/src/: contract.rs  main.rs
src/: contract.rs  msg.rs
